kube/components/open-metadata/kube/ingestion-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: ingestion
  name: ingestion
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: ingestion
status:
  loadBalancer: {}
