kube/components/open-metadata/kube/ometa-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ometa-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ometa-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ometa-network: "true"
